cart/webapp/css/style.css
/* override background color for non-accessibility themes */
html:not(.sapUiTheme-sap_hcb):not(.sapUiTheme-sap_hcw) .customBackground section {
	background-color: #bad0e3;
}

.sapUiDemoCart .welcomePrice  {
	width: 100%;
	padding: 0;
	border-bottom-width: 0;
}

.sapUiDemoCart .welcomeText {
	display: block;
	padding-left: 3rem;
	padding: 1rem;
	font-size: 2rem;
	font-weight: bold;
}

/* override background color for non-accessibility themes */
html:not(.sapUiTheme-sap_hcb):not(.sapUiTheme-sap_hcw) .sapUiDemoCart .welcomeText {
	background-color: rgba(255,255,255,0.5);
}

.sapUiDemoCart .welcomeCarouselText {
	color: white;
	display: block;
	position: fixed;
	bottom: 0;
	padding: 1rem;
	font-size: 1.5rem;
	width: 100%;
	text-shadow: 0 0 0.125rem #000000;
}

.blockLayoutContentPhones {
	margin-top: 23px;
}

.blockLayoutContentTablets {
	margin-top: 10px;
}

.imagesOnTablets {
	width: 50%;
	height: 50%;
}

